--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
         <div class="feature-box col-lg-4">
           <h3 class="feature-heading"><i class="icon fa-solid fa-heart fa-4x"></i> Guaranteed to work</h3>
-          <p class="feature-paragraph">Find the love of your dog's life or your money back.</p>
+          <p class="feature-para">Find the love of your dog's life or your money back.</p>
         </div>
       </div>
   </section>
